fix low z-index of the error

--- a/web/src/static/styles/styles/components/error.css
+++ b/web/src/static/styles/styles/components/error.css
@@ -1,5 +1,5 @@
 #global-error {
-    @apply fixed top-0 left-0 right-0 h-12 flex items-center justify-center;
+    @apply fixed top-0 left-0 right-0 h-12 flex items-center justify-center z-50;
     @apply bg-rose-700/80 text-white font-bold text-center;
     @apply transition-transform duration-500 ease-in-out;
 
